Trello #449 Discourse tweaks - update restricted topic/category icon, header hamburger menu cats into 2 cols, fix active dropdown header menu icon colors, add spacing next to unread message notif badge in header user menu

--- a/assets/stylesheets/desktop/topic-post.scss
+++ b/assets/stylesheets/desktop/topic-post.scss
@@ -321,13 +321,15 @@ span.post-count {
 
 
 .read_restricted .gutter:before {
-  color: lighten($red-SP, 30%);
+  color: lighten($red-SP, 25%);
   content: "\f023";
+  // content: $fa-var-lock; // lock icon \f023
+  content: $fa-var-eye-slash; // eye-slash icon \f070
   position: absolute;
   top: auto;
-  bottom: 30px;
+  bottom: 0px;
   left: auto;
-  right: -90px;
+  right: -110px;
 }
 
 
